master/force-app/main/default/objects/CustomName_2__c/CustomName_2__c.object-meta.xml
<CustomObject>
    <description>Description_2</description>
    <label>CustomName_2</label>
    <nameField>
        <label>CustomName_2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomName_2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>