master/force-app/main/default/objects/CustomName_2__c/fields/CustomField_102__c.field-meta.xml
<CustomField>
    <fullName>CustomField_102__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusField102</label>
    <length>255</length>
    <type>Text</type>
</CustomField>